...
        textField.textContainer.maximumNumberOfLines = 1
        textField.textContainer.lineBreakMode = .byTruncatingTail
//        textField.translatesAutoresizingMaskIntoConstraints = false
        textField.tintColor = .white
        
        
        textField.placeholder = "Title"
        textField.placeholderFont = UIFont(name: "Rubik-Bold", size: 26)!
        textField.placeholderColor = .white
        textField.placeholderAlignment = .center
        textField.shouldHidePlaceholderOnEditing = true
        //        textField.placeholderColor = UIColor(white: 0.7, alpha: 1)
        ////        textField.placeholderAlignment = .center
...
    
    lazy var saveButton : UIButton = {
        let saveButton = UIButton(frame: .init(x: self.helpButton.frame.maxX + 10, y: self.view.safeAreaLayoutGuide.layoutFrame.maxY - 85, width: self.blockWidth/2 - 5, height: 55))
        
        saveButton.layer.cornerRadius = 25
        saveButton.backgroundColor = UIColor(hex: "#00E0FFA2")
        saveButton.setTitle("Save", for: .normal)
        saveButton.titleLabel?.font = UIFont(name: "Rubik-Bold", size: 21)
//        saveButton.translatesAutoresizingMaskIntoConstraints = false
        saveButton.addTarget(self, action: #selector(saveButtonPressed), for: .touchUpInside)
        
        return saveButton
    }()
...
