...
    }
    
    override func tableView(_ tableView: UITableView, contextMenuConfigurationForRowAt indexPath: IndexPath, point: CGPoint) -> UIContextMenuConfiguration? {
        let identifier = indexPath as NSCopying
        
        return UIContextMenuConfiguration(identifier: identifier, previewProvider: nil) { (_) -> UIMenu? in
            let deleteAction = UIAction(title: "Delete", image: UIImage(systemName: "trash"), attributes: .destructive) { _ in
                
                PersistanceLayer.coreData.delete(object: self.dreamsBySections[indexPath.section][indexPath.row])
                self.dreamSorter.remove(at : indexPath)
                self.updateDreamsArray()
                DispatchQueue.main.async {
                    if PersistanceLayer.coreData.fetch(type: Dream.self).count == 0 {
...
